fixing the spacing betweenn accessories and support links

--- a/src/packages/modules/search-results-z07/css/search-results-z07.scss
+++ b/src/packages/modules/search-results-z07/css/search-results-z07.scss
@@ -12,7 +12,7 @@
   }
 
   .h-list-md > * + * {
-    margin-left: 16px;
+    margin-left: 24px;
   }
 
   .h-list-lg > * + * {
